Fix code blocks on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,34 +1,31 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+
 @charset "utf-8";
 
-
-
 // Our variables
-$base-font-family: 'IBM Plex Sans', sans-serif;
-$base-font-size:   16px;
-$small-font-size:  $base-font-size * 0.875;
+$base-font-family: "IBM Plex Sans", sans-serif;
+$base-font-size: 16px;
+$small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit: 30px;
 
-$text-color:       #222;
+$text-color: #222;
 $background-color: #fafafa;
-$brand-color:      #0069FF;
+$brand-color: #0069ff;
 $hover-color: darken($brand-color, 15%);
 
-$grey-color:       #828282;
+$grey-color: #828282;
 $grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+$grey-color-dark: darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width: 800px;
 
-$on-palm:          600px;
-$on-laptop:        800px;
-
-
+$on-palm: 600px;
+$on-laptop: 800px;
 
 // Using media queries with like this:
 // @include media-query($on-palm) {
@@ -43,17 +40,11 @@ $on-laptop:        800px;
     }
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+@import "base", "layout", "syntax-highlighting";
 
 .nav-cta {
-    background: #0069FF;
+    background: #0069ff;
     color: #fff !important;
     border-radius: 5px;
     padding: 5px 15px;
@@ -69,7 +60,8 @@ $on-laptop:        800px;
     text-align: center;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 body {
@@ -94,9 +86,9 @@ body {
 
     a {
         color: #fff;
-    font-weight: 500;
-    border-bottom: 1px #fff solid;
-    text-decoration: none;
+        font-weight: 500;
+        border-bottom: 1px #fff solid;
+        text-decoration: none;
     }
 }
 
@@ -105,13 +97,13 @@ ol {
     padding-left: 2em;
     list-style-type: none;
     margin-left: 0;
-  }
+}
 
-  ol > li {
-      min-height: 40px;
-  }
-  
-  ol > li:before {
+ol > li {
+    min-height: 40px;
+}
+
+ol > li:before {
     content: counter(ol-counter);
     counter-increment: ol-counter;
     margin-right: 1em;
@@ -130,27 +122,28 @@ ol {
     margin-left: -40px;
     border-radius: 50%;
     font-size: 16px;
-  }
+}
 
-  pre {
+pre {
     font-size: 16px;
     background: #272822;
     padding: 16px 30px 14px;
-    margin: 1em -30px;
     border-radius: 8px;
     white-space: pre-wrap;
     word-wrap: break-word;
     font-style: normal;
-  }
+    white-space: pre-wrap;
+}
 
-  pre > code {
+pre > code {
     background: none;
     padding: 0;
     font-size: inherit;
-    white-space: unset;
-  }
+    max-width: 100%;
+    word-wrap: anywhere;
+}
 
-  hr {
-      border-color: #00000010;
-      margin: 2em;
-  }
+hr {
+    border-color: #00000010;
+    margin: 2em;
+}
